# cli-pi-flasher

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
configs/: policy.example.toml
crates/piflasher-agent/: Cargo.toml
crates/piflasher-agent/src/: main.rs
crates/piflasher-cli/: Cargo.toml
crates/piflasher-cli/src/: main.rs
crates/piflasher-core/: Cargo.toml
crates/piflasher-core/src/: device.rs  error.rs  flash.rs  image.rs  lib.rs  paths.rs  policy.rs  report.rs
crates/piflasher-platform-macos/: Cargo.toml
crates/piflasher-platform-macos/src/: lib.rs
crates/piflasher-platform-windows/: Cargo.toml
crates/piflasher-platform-windows/src/: lib.rs
crates/piflasher-protocol/: Cargo.toml
crates/piflasher-protocol/src/: lib.rs
crates/piflasher-report/: Cargo.toml
crates/piflasher-report/src/: lib.rs
packaging/macos/: com.piflasher.agent.plist  postinstall.sh
packaging/windows/: PiFlasher.wxs
scripts/windows/: setup-windows.cmd  setup-windows.ps1  start-piflasher.cmd
tests/fixtures/: README.md
tests/integration/: README.md
