[package]
name = "piflasher-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "piflasher"
path = "src/main.rs"

[dependencies]
piflasher-core = { path = "../piflasher-core" }
piflasher-protocol = { path = "../piflasher-protocol" }
piflasher-report = { path = "../piflasher-report" }
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
piflasher-platform-macos = { path = "../piflasher-platform-macos" }
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
piflasher-platform-windows = { path = "../piflasher-platform-windows" }

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
piflasher-platform-macos = { path = "../piflasher-platform-macos" }
