[package]
name = "piflasher-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
piflasher-protocol = { path = "../piflasher-protocol" }
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
fs2.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
toml.workspace = true
uuid.workspace = true
xz2.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile = "3"
